{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 230,
  "lineage": "5d9e8684-f498-86a9-26c8-dc0abf0da884",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "OS1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e306788ff2473ccb",
            "arn": "arn:aws:ec2:ap-south-1:484877160476:instance/i-003363ebda793bc43",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003363ebda793bc43",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07fcbe2924cea4aed",
            "private_dns": "ip-172-31-13-20.ap-south-1.compute.internal",
            "private_ip": "172.31.13.20",
            "public_dns": "ec2-65-0-61-107.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.61.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0021e72f421561609",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Hitesh-terraform-firewall"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3a5e3276",
            "tags": {
              "Name": "myos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0112d839ff8fba302"
            ]
          },
          "dependencies": [
            "aws_security_group.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484877160476:security-group/sg-043ed4a883b978ac1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-043ed4a883b978ac1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "nfs",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Hitesh-terraform-efs-sg",
            "name_prefix": null,
            "owner_id": "484877160476",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-608d9b08"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:484877160476:security-group/sg-0112d839ff8fba302",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0112d839ff8fba302",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Hitesh-terraform-firewall",
            "name_prefix": null,
            "owner_id": "484877160476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-608d9b08"
          }
        }
      ]
    }
  ]
}